--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -121,6 +121,18 @@
         [[/if ]]
         <form method='post' action='' class='pin' id='id_pledge_form'>
             {% csrf_token %}
+
+            {% for field in form %}
+                {% if field.name in invisibleFormFields %}
+                    <div class="form-group collapse" id="invisible_form_{{ field.name }}">
+                        {% if field.name not in form.hide_labels %}
+                            {% bootstrap_label field.label label_class="labels" %}
+                        {% endif %}
+                        {% bootstrap_field field layout="vertical" vertical_field_class="col-md-3" show_label=False %}
+                    </div>
+                {% endif %}
+            {% endfor %}
+
             <h1>How would you like to donate?</h1>
             <div class="donation-type-section">
                 <div data-toggle="buttons">
@@ -155,15 +167,27 @@
 
             <div class="panel panel-default form-container donor-details-section">
                 <div class="panel-body">
-                <legend>Donor Details</legend>
-                {% for field in form %}
-                    <div class="form-group [[ hidden_initial.indexOf('{{ field.name }}') === -1 ? '' : 'collapse' ]]" id="id_formgroup_{{ field.name }}">
-                        {% if field.name not in form.hide_labels %}
-                            {% bootstrap_label field.label label_class="labels" %}
-                        {% endif %}
-                        {% bootstrap_field field layout="vertical" vertical_field_class="col-md-3" show_label=False %}
+                    <legend>Donor Details</legend>
+                    <div class="form-group" id="form_first_name">
+                        <label class="control-label" for="id_first_name">Name</label>
+                        <input class="form-control" type="text" id="id_first_name" maxlength="1024" name="first_name" placeholder="Name" title="" value="">
                     </div>
-                {% endfor %}
+
+                    <div class="form-group" id="form_email">
+                        <label class="control-label" for="id_email">Email</label>
+                        <input class="form-control" type="email" id="id_email" maxlength="254" name="email" placeholder="Email" required="" title="" value="" aria-required="true">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label" for="id_how_did_you_hear_about_us">How did you hear about us?</label>
+                        <input class="form-control" type="text" id="id_how_did_you_hear_about_us" name="how_did_you_hear_about_us" placeholder="How did you hear about us?" title="" value="">
+                    </div>
+
+                    <div class="form-group" id="id_formgroup_subscribe_to_updates">
+                        <div class="checkbox">
+                            <label for="id_subscribe_to_updates"><input type="checkbox" id="id_subscribe_to_updates" name="subscribe_to_updates" value="on"> Send me news and updates</label>
+                        </div>
+                    </div>
                 </div>
             </div>
 
