Change style on custom amount

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -173,8 +173,7 @@
                     <label class="sr-only control-label" for="id_amount">Amount</label>
                     <div class="input-group">
                         <span class="input-group-addon">$</span>
-                        <input class="form-control" type="number" id="id_amount" step="1" name="amount" placeholder="Amount" title="" value="[[ donation_amount ]]">
-                        <span class="input-group-addon">.00</span>
+                        <input class="form-control" type="number" id="id_amount" step="1" min="2" name="amount" placeholder="Amount" title="" value="[[ donation_amount ]]">
                     </div>
                 </div>
             </div>
