--- a/static/css/pledge.css
+++ b/static/css/pledge.css
@@ -200,7 +200,7 @@ body {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: baseline;
 }
 
 .donation-amount-section .btn {
@@ -224,7 +224,8 @@ body {
 
 #form_donation_amount {
     margin: 0;
-    max-width: 200px;
+    max-width: 150px;
+    align-self: flex-start;
 }
 
 #id_bank_transfer {
