--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -113,7 +113,7 @@
         <div class="selected-charity-box">
             <img class="charity-img" src="static/[[ selected_charity.website_image ]]">
             <p class="donation-info">
-                You have earmarked your donation for [[ selected_charity.name ]].<br/>
+                You have earmarked your donation for [[ selected_charity.name ]].
                 100% of your donation will be granted to them.
             </p>
         </div>
@@ -247,7 +247,7 @@
                             <p>After you submit this form, we will give you our account details and a unique reference number.</p>
                             [[#if recurring]]
                             <p>You then need to log in to your bank and create a periodic monthly transfer using these details.</p>
-                            <p>You can stop or change the amount you donate at any time.</p>
+                            <p>You can stop your donation or change the amount at any time.</p>
                             [[else]]
                             <p>You then need to log in to your bank and make a bank transfer using these details.</p>
                             [[/if recurring]]
