Default to Credit Card

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -297,7 +297,7 @@
             recurring: null,
             donation_amount: null,
             is_custom_amount: false,
-            pmt_method: null,
+            pmt_method: '3',
             selected_charity_id: null,
             selected_charity: null,
             charities: charities,
