remove 'name's on credit card fields so they don't get submitted to us

--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -9,7 +9,7 @@
     <div class="form-group">
         <label class="control-label labels col-xs-3" for="cardName">Name on card</label>
         <div class="col-xs-9">
-            <input type="text" class="form-control cc-form" name="cardName" id="cc-name" placeholder="Full name"/>
+            <input type="text" class="form-control cc-form" id="cc-name" placeholder="Full name"/>
         </div>
     </div>
 
@@ -20,7 +20,6 @@
                 <input
                         type="tel"
                         class="form-control cc-form"
-                        name="cardNumber"
                         id="cc-number"
                         placeholder="Valid Card Number"
                         autocomplete="cc-number"
@@ -39,7 +38,6 @@
                     type="tel"
                     class="form-control cc-form"
                     id="cc-expiry"
-                    name="cardExpiry"
                     placeholder="MM / YY"
                     autocomplete="cc-exp"
             />
@@ -50,7 +48,6 @@
                     type="password"
                     class="form-control cc-form"
                     id="cc-cvc"
-                    name="cardCVC"
                     placeholder="CVC"
                     autocomplete="cc-csc"
             />
