--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -33,7 +33,7 @@
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/additional-methods.min.js"></script>
 
-    <script src='http://cdn.ractivejs.org/latest/ractive.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/ractive/0.9.0-build-91/ractive.js'></script>
 
     <link href="{% static 'css/pledge.css' %}" type="text/css" media="all" rel="stylesheet">
     <link href="{% static 'css/process_steps.css' %}" type="text/css" media="all" rel="stylesheet">
