fix the AMF link that's shown

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -102,7 +102,7 @@
             <p class="donation-info">
                 Donations to the Against Malaria Foundation are tax deductible in Australia.
                 We prefer that you donate to the Against Malaria Foundation directly at
-                <a href='https://www.againstmalaria.com/Donation.aspx?GroupID=86'>https://www.againstmalaria.com/Donation.aspx</a>.
+                <a href='https://www.againstmalaria.com/Donation.aspx?GroupID=86'>https://www.againstmalaria.com/Donation.aspx?GroupID=86</a>.
             </p>
         </div>
     </div>
