--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 
 <fieldset id='pin_credit_card_details'>
-    {#            <div class='errors' style='display:none'>#}
-    {#                <h3></h3>#}
-    {#                <ul></ul>#}
-    {#            </div>#}
+    <div class='pin-errors' style='display:none'>
+        <h3></h3>
+        <ul></ul>
+    </div>
 
     <div class="form-group">
         <label class="control-label labels col-sm-3" for="cardName">Name on card</label>
