Tiny form fixes.

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -189,7 +189,7 @@
                     <div class="form-group" id="form_email">
                         <label class="control-label col-sm-3" for="id_email">Email</label>
                         <div class="col-sm-9">
-                            <input class="form-control" type="email" id="id_email" maxlength="254" name="email" placeholder="Email" required="" title="" value="" aria-required="true">
+                            <input class="form-control" type="email" id="id_email" maxlength="254" name="email" placeholder="Email"  title="" value="" required aria-required>
                         </div>
                     </div>
 
@@ -212,7 +212,7 @@
 
                     <div class="form-group" id="id_formgroup_subscribe_to_updates">
                         <div class="checkbox col-sm-offset-3">
-                            <label for="id_subscribe_to_updates"><input type="checkbox" id="id_subscribe_to_updates" name="subscribe_to_updates" value="on"> Send me news and updates</label>
+                            <label for="id_subscribe_to_updates"><input type="checkbox" id="id_subscribe_to_updates" name="subscribe_to_updates" checked> Send me news and updates</label>
                         </div>
                     </div>
                 </div>
@@ -272,13 +272,14 @@
             </div>
 
             <p>
-                Having a problem donating? Please let us know at info@effectivealtruism.org.au.
+                Having a problem donating? Please let us know at <a href="mailto://info@effectivealtruiusm.org.au">info@effectivealtruism.org.au</a>.
             </p>
 
             <div class="form-actions">
                 <button type="submit"
                         class="btn btn-success btn-lg pull-right subscribe"
-                        value="Submit">Submit
+                        value="Submit">
+                    Submit
                 </button>
             </div>
         </form>
